--- a/Practica3/project/programacion2d.vcxproj.filters
+++ b/Practica3/project/programacion2d.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="..\src\vec2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Font.cpp">
+    <ClCompile Include="..\src\Font.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClInclude Include="..\lib\stb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Font.h">
+    <ClInclude Include="..\src\Font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
