--- a/Practica3/project/programacion2d.vcxproj
+++ b/Practica3/project/programacion2d.vcxproj
@@ -19,22 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Font.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\vec2.cpp" />
-    <ClCompile Include="Font.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h" />
     <ClInclude Include="..\lib\stb_truetype.h" />
+    <ClInclude Include="..\src\Font.h" />
     <ClInclude Include="..\src\vec2.h" />
-    <ClInclude Include="Font.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{12C74402-E6BB-4B59-A4A7-43EEAE9E5D6A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>programacion2d</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
