--- a/Practica5/project/programacion2d.vcxproj.filters
+++ b/Practica5/project/programacion2d.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\src\Colliders.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="asd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h">
