--- a/Practica5/project/programacion2d.vcxproj
+++ b/Practica5/project/programacion2d.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\Sprite.cpp" />
     <ClCompile Include="..\src\Vec2.cpp" />
+    <ClCompile Include="asd.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h" />
