--- a/Practica5/project/programacion2d.vcxproj.filters
+++ b/Practica5/project/programacion2d.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="asd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dsf.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h">
