--- a/Practica6/project/programacion2d.vcxproj
+++ b/Practica6/project/programacion2d.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\Sprite.cpp" />
     <ClCompile Include="..\src\Vec2.cpp" />
+    <ClCompile Include="..\src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h" />
@@ -32,6 +33,7 @@
     <ClInclude Include="..\src\Font.h" />
     <ClInclude Include="..\src\Sprite.h" />
     <ClInclude Include="..\src\Vec2.h" />
+    <ClInclude Include="..\src\World.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
