--- a/Practica6/project/programacion2d.vcxproj.filters
+++ b/Practica6/project/programacion2d.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\src\Colliders.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\World.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Colliders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\World.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
